--- a/archlinuxconfig/sway/config
+++ b/archlinuxconfig/sway/config
@@ -180,8 +180,9 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
-    bindsym $mod+Shift+a exec grim -g - ~/sc-$(date +"%Y-%m-%d-%H-%M-%S").png
-
+    bindsym $mod+Shift+a exec grim -g "$(slurp)" ~/sc-$(date +"%Y-%m-%d-%H-%M-%S").png
+    bindsym Ctrl+p exec wf-recorder --audio=Combined.monitor -f ~/recording_$(date +"%Y-%m-%d_%H:%M:%S.mp4")
+    bindsym Ctrl+Shift+t exec killall -s SIGINT wf-recorder
 #
 # Status Bar:
 #
